deployment/archive/k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-dashboard
  labels:
    name: kafka-dashboard
    app: application-metrics-dashboard
